k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jition-frontend-service
  namespace: default
spec:
  selector:
    app: jition-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: LoadBalancer
